The navigation icons were not showing up. Fixed it

--- a/apps/Announcements/index.scss
+++ b/apps/Announcements/index.scss
@@ -125,7 +125,7 @@
     bottom: 40%;
     right: 0;
     z-index: 999;
-    color: #fff;
+    color: gray;
     opacity: 0.3;
     background-color: white;
     margin-right: 1%;
@@ -137,7 +137,7 @@
     bottom: 40%;
     left: 0;
     z-index: 999;
-    color: #fff;
+    color: gray;
     opacity: 0.3;
     background-color: white;
     margin-left: 1%;
@@ -223,8 +223,5 @@
         transform: scale(0.99);
       }
     }
-  }
-  .svg-inline--fa{
-    color: gray;
   }
 }
